--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
 </head>
 <body>
-  <div id="root">HELLO GIT PAGES</div>
+  <div id="root"><h1>HELLO GIT PAGES</h1></div>
   <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
