--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
 </head>
 <body>
-  <div id="root"><h1>HELLO GIT PAGES</h1></div>
-  <script src="main.js" type="text/javascript"></script>
+  <div class="main-container">
+    <div class="inner-container">
+      <div class="header">
+
+      </div>
+      <div class="hero">
+        <div class="title">Welcome to FragWafer.com</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
