--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My HTML Page</title>
-  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="style.css">
+  <title>FragWafer</title>
+
+  <style>
+    .title{
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <div class="main-container">
