--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="hero">
         <div class="title">Welcome to PrettyPleaseCollective.org </div>
-        <div class="sub-title">Our mission is to take advantage of dumb people who have no fassion sense!</div>
+        <div class="sub-title">Our mission is to take advantage of dumb people who have no fashion sense!</div>
         <div class="sub-title-2">Here at prettypleasecollective.org, we spend minutes combing the streets of LA finding cheap cloths that dumb people would love. Since our main audience is dumb people, we are not afraid to upsell at minimum 500% per product. </div>
       </div>
     </div>
